--- a/WebAdmin/Views/Shared/P_HeaderHorizontalLayout.cshtml
+++ b/WebAdmin/Views/Shared/P_HeaderHorizontalLayout.cshtml
@@ -30,13 +30,13 @@
                             </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" asp-controller="Account" asp-action="UserProfile/1">
-                                <i class="bx bx-user"></i><span>Profile</span>
+                            <a class="dropdown-item" asp-controller="Account" asp-action="UserProfile">
+                                <i class="bx bx-user"></i><span>Hồ sơ</span>
                             </a>
 
                             <div class="dropdown-divider mb-0"></div>
                             <a class="dropdown-item" asp-controller="Account" asp-action="LogOut">
-                                <i class='bx bx-log-out'></i><span>Logout</span>
+                                <i class='bx bx-log-out'></i><span>Đăng xuất</span>
                             </a>
                         </div>
                     </li>
@@ -48,7 +48,7 @@
                             <div class="media user-box align-items-center">
                                 <div class="media-body user-info">
                                     <p class="user-name mb-0">
-                                        Login
+                                        Đăng nhập
                                     </p>
                                 </div>
                                 <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909__340.png" class="user-img" alt="user avatar">
