--- a/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
+++ b/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
@@ -15,13 +15,12 @@
     <!--navigation-->
     <ul class="metismenu" id="menu">
 
-        <li class="menu-label">Web Apps</li>
         <li>
             <a asp-controller="Home" asp-action="Index">
                 <div class="parent-icon icon-color-3">
                     <i class="bx bx-home"></i>
                 </div>
-                <div class="menu-title">Home</div>
+                <div class="menu-title">TRANG CHỦ</div>
             </a>
         </li>
         <li>
@@ -29,7 +28,7 @@
                 <div class="parent-icon icon-color-2">
                     <i class='bx bx-cog'></i>
                 </div>
-                <div class="menu-title">Student Management</div>
+                <div class="menu-title">QUẢN LÝ THÔNG TIN</div>
             </a>
         </li>
     </ul>
