--- a/WebAdmin/Views/Student/Index.cshtml
+++ b/WebAdmin/Views/Student/Index.cshtml
@@ -12,6 +12,7 @@
 @section Scripts{
     <partial name="_P_ScriptsTableAndFormBasic" />
     <script src="~/assets/plugins/select2/js/select2.min.js"></script>
+    <script src="~/assets/libs/bootstrap-maxlength/bootstrap-maxlength.min.js"></script>
     <script src="~/controller/student_manage.js" asp-append-version="true"></script>
 }
 
@@ -22,7 +23,7 @@
                 <div class="card radius-15">
                     <div class="card-body">
                         <div class="card-title">
-                            <h5 class="mb-0">Manage Student </h5>
+                            <h5 class="mb-0">QUẢN LÝ SINH VIÊN</h5>
                         </div>
                         <hr />
                         <div>
@@ -52,8 +53,8 @@
                                     <option class="text-warning" value="2">Giảng viên</option>
                                 </select>
                                 <div class="col-12 col-lg-auto">
-                                    <a href="#addNewPersonModal" class="btn btn-outline-info" onclick="ShowAddModal(this)"><i class="material-icons">&#xE147;</i> <span>Add New Student</span></a>
-                                    <button class="btn btn-outline-dark" onclick="LoadDataTable()"><i class="material-icons">&#xe5d5;</i> <span>Load</span></button>
+                                    <a href="#addNewPersonModal" class="btn btn-outline-info" onclick="ShowAddModal(this)"><i class="material-icons">&#xE147;</i> <span>THÊM</span></a>
+                                    <button class="btn btn-outline-dark" onclick="LoadDataTable()"><i class="material-icons">&#xe5d5;</i> <span>TẢI LẠI</span></button>
 
                                 </div>
                             </div>
@@ -61,19 +62,20 @@
 
                         </div>
                     </div>
+                    @*<img src="" />*@
                     <div class="table-responsive pl-2">
 
                         <table class="table mb-0 w-100 uk-table uk-table-hover uk-table-striped uk-table-middle table-bordered" id="table_main">
                             <thead>
                                 <tr style="background-color: rgb(78, 173, 207)">
-                                    <th>Stt</th>
-                                    <th>Họ và tên</th>
-                                    <th>Giới tính</th>
-                                    <th>Ngày sinh</th>
-                                    <th>Địa chỉ Email</th>
-                                    <th>Quốc tịch</th>
-                                    <th>Trang thái</th>
-                                    <th></th>
+                                    <th class="text-white">Stt</th>
+                                    <th class="text-white">Họ và tên</th>
+                                    <th class="text-white">Giới tính</th>
+                                    <th class="text-white">Ngày sinh</th>
+                                    <th class="text-white">Địa chỉ Email</th>
+                                    <th class="text-white">Ảnh</th>
+                                    <th class="text-white">Trang thái</th>
+                                    <th class="text-white"></th>
                                 </tr>
                             </thead>
                             <tfoot>
